--- a/notebook/experiment1.ipynb
+++ b/notebook/experiment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "id": "8bdc5da2",
    "metadata": {},
    "outputs": [],
@@ -14,28 +14,30 @@
     "import joblib\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split,GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split,GridSearchCV,RandomizedSearchCV\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.metrics import mean_squared_error,r2_score\n",
-    "from sklearn.linear_model import LinearRegression\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "import mlflow\n",
+    "import mlflow.sklearn\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c90d6610",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../df/raw/CarPrice_Assignment.csv\")"
+    "df = pd.read_csv(\"../data/raw/CarPrice_Assignment.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "90fa6d31",
    "metadata": {},
    "outputs": [
@@ -241,7 +243,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ebb08087",
    "metadata": {},
    "outputs": [
@@ -262,7 +264,7 @@
        "(205, 26)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3ca7ebf3",
    "metadata": {},
    "outputs": [
@@ -339,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "1d6db64f",
    "metadata": {},
    "outputs": [
@@ -375,7 +377,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "44674390",
    "metadata": {},
    "outputs": [
@@ -626,7 +628,7 @@
        "max    288.000000  6600.000000   49.000000   54.000000  45400.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0b61c45e",
    "metadata": {},
    "outputs": [
@@ -745,7 +747,7 @@
        "freq              202        148            159         94  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ce540d8b",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1012,7 @@
        "price             10295.00  16503.00  45400.00  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "5805800a",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1059,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "83566839",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1106,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "5999df37",
    "metadata": {},
    "outputs": [],
@@ -1125,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "f246370b",
    "metadata": {},
    "outputs": [
@@ -1499,7 +1501,7 @@
        "[205 rows x 25 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "6d7e7c3f",
    "metadata": {},
    "outputs": [],
@@ -1531,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "eb7c563f",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1544,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "d311cdfe",
    "metadata": {},
    "outputs": [
@@ -1610,7 +1612,7 @@
        "freq              6"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1621,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "1d655642",
    "metadata": {},
    "outputs": [
@@ -1640,7 +1642,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "5138ad0b",
    "metadata": {},
    "outputs": [
@@ -1754,7 +1756,7 @@
        "freq          148            159         94  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1765,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "dca241cb",
    "metadata": {},
    "outputs": [
@@ -1882,7 +1884,7 @@
        "4        ohc           five       mpfi  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1893,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "e05c0553",
    "metadata": {},
    "outputs": [],
@@ -1905,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "2932761c",
    "metadata": {},
    "outputs": [
@@ -1932,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "id": "ed63e278",
    "metadata": {},
    "outputs": [],
@@ -1950,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "id": "aaeb2ffe",
    "metadata": {},
    "outputs": [
@@ -2156,7 +2158,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2167,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "id": "24f06e85",
    "metadata": {},
    "outputs": [],
@@ -2178,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "id": "17bcb234",
    "metadata": {},
    "outputs": [],
@@ -2188,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "id": "ea605ae0",
    "metadata": {},
    "outputs": [],
@@ -2198,8 +2200,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "161e31fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.20, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e97ef06b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_regressor = RandomForestRegressor(random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "70b5a5d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Auto search range\n",
+    "param_dist = {\n",
+    "    'n_estimators': np.arange(50, 301, 50),\n",
+    "    'max_depth': [None] + list(np.arange(5, 31, 5)),\n",
+    "    'min_samples_split': np.arange(2, 11),\n",
+    "    'min_samples_leaf': np.arange(1, 5)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "d171ee0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/04/17 18:12:07 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Params: {'n_estimators': np.int64(150), 'min_samples_split': np.int64(2), 'min_samples_leaf': np.int64(1), 'max_depth': np.int64(15)}\n",
+      "RMSE: 1791.4957527777108 R²: 0.9593451537373163\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Start MLflow\n",
+    "with mlflow.start_run():\n",
+    "\n",
+    "    # Randomized Search\n",
+    "    random_search = RandomizedSearchCV(\n",
+    "        rf_regressor,\n",
+    "        param_distributions=param_dist,\n",
+    "        n_iter=20,  # Number of combinations to try\n",
+    "        cv=3,\n",
+    "        scoring='neg_mean_squared_error',\n",
+    "        n_jobs=-1,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "\n",
+    "    random_search.fit(X_train, y_train)\n",
+    "\n",
+    "    best_model = random_search.best_estimator_\n",
+    "    best_params = random_search.best_params_\n",
+    "\n",
+    "    y_pred = best_model.predict(X_test)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "    # Log everything\n",
+    "    for k, v in best_params.items():\n",
+    "        mlflow.log_param(k, v)\n",
+    "\n",
+    "    mlflow.log_metric(\"rmse\", rmse)\n",
+    "    mlflow.log_metric(\"r2\", r2)\n",
+    "    mlflow.sklearn.log_model(best_model, \"random_forest_model\")\n",
+    "\n",
+    "    print(\"Best Params:\", best_params)\n",
+    "    print(\"RMSE:\", rmse, \"R²:\", r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b237fe3",
    "metadata": {},
    "outputs": [],
    "source": []
