third-notebook complete mlflow complete

--- a/notebook/experiment1.ipynb
+++ b/notebook/experiment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "8bdc5da2",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "c90d6610",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "90fa6d31",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "ebb08087",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "(205, 26)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "3ca7ebf3",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "1d6db64f",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "44674390",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "max    288.000000  6600.000000   49.000000   54.000000  45400.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "0b61c45e",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
        "freq              202        148            159         94  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "ce540d8b",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1012,7 @@
        "price             10295.00  16503.00  45400.00  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "5805800a",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1059,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "83566839",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "5999df37",
    "metadata": {},
    "outputs": [],
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "f246370b",
    "metadata": {},
    "outputs": [
@@ -1501,7 +1501,7 @@
        "[205 rows x 25 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "6d7e7c3f",
    "metadata": {},
    "outputs": [],
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "eb7c563f",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1544,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "d311cdfe",
    "metadata": {},
    "outputs": [
@@ -1612,7 +1612,7 @@
        "freq              6"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "1d655642",
    "metadata": {},
    "outputs": [
@@ -1642,7 +1642,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "5138ad0b",
    "metadata": {},
    "outputs": [
@@ -1756,7 +1756,7 @@
        "freq          148            159         94  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1767,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "dca241cb",
    "metadata": {},
    "outputs": [
@@ -1884,7 +1884,7 @@
        "4        ohc           five       mpfi  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "e05c0553",
    "metadata": {},
    "outputs": [],
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "2932761c",
    "metadata": {},
    "outputs": [
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "ed63e278",
    "metadata": {},
    "outputs": [],
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "aaeb2ffe",
    "metadata": {},
    "outputs": [
@@ -2158,7 +2158,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2169,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "24f06e85",
    "metadata": {},
    "outputs": [],
@@ -2180,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "17bcb234",
    "metadata": {},
    "outputs": [],
@@ -2190,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "ea605ae0",
    "metadata": {},
    "outputs": [],
@@ -2200,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "id": "161e31fe",
    "metadata": {},
    "outputs": [],
@@ -2210,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "e97ef06b",
    "metadata": {},
    "outputs": [],
@@ -2220,7 +2220,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
+   "id": "648231b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/04/17 21:29:46 INFO mlflow.tracking.fluent: Experiment with name 'MLflow Quickstart' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='mlflow-artifacts:/278357840985887951', creation_time=1744905586874, experiment_id='278357840985887951', last_update_time=1744905586874, lifecycle_stage='active', name='MLflow Quickstart', tags={}>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.set_tracking_uri(uri=\"http://127.0.0.1:5000\")\n",
+    "mlflow.set_experiment(\"MLflow Quickstart\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "70b5a5d3",
    "metadata": {},
    "outputs": [],
@@ -2236,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "d171ee0f",
    "metadata": {},
    "outputs": [
@@ -2244,7 +2273,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/04/17 18:12:07 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/04/17 21:33:41 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     },
     {
@@ -2252,7 +2281,9 @@
      "output_type": "stream",
      "text": [
       "Best Params: {'n_estimators': np.int64(150), 'min_samples_split': np.int64(2), 'min_samples_leaf': np.int64(1), 'max_depth': np.int64(15)}\n",
-      "RMSE: 1791.4957527777108 R²: 0.9593451537373163\n"
+      "RMSE: 1791.4957527777108 R²: 0.9593451537373163\n",
+      "🏃 View run calm-snipe-199 at: http://127.0.0.1:5000/#/experiments/278357840985887951/runs/1779165280714332b377752bec92b47d\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/278357840985887951\n"
      ]
     }
    ],
@@ -2289,16 +2320,119 @@
     "    mlflow.sklearn.log_model(best_model, \"random_forest_model\")\n",
     "\n",
     "    print(\"Best Params:\", best_params)\n",
-    "    print(\"RMSE:\", rmse, \"R²:\", r2)"
+    "    print(\"RMSE:\", rmse, \"R²:\", r2)\n",
+    "import mlflow.models\n",
+    "\n",
+    "signature = mlflow.models.infer_signature(X_train, best_model.predict(X_train))\n",
+    "mlflow.sklearn.log_model(best_model, \"random_forest_model\", signature=signature, input_example=X_train[:5])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "554519ab",
+   "metadata": {},
+   "source": [
+    "## add model signature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4b237fe3",
+   "execution_count": 34,
+   "id": "aea3f661",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading artifacts: 100%|██████████| 7/7 [00:00<00:00, 123.65it/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<mlflow.models.model.ModelInfo at 0x2a15d32e710>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mlflow.models\n",
+    "\n",
+    "signature = mlflow.models.infer_signature(X_train, best_model.predict(X_train))\n",
+    "mlflow.sklearn.log_model(best_model, \"random_forest_model\", signature=signature, input_example=X_train[:5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f8a7a403",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'RandomForestRegressorModel'.\n",
+      "2025/04/17 21:45:16 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: RandomForestRegressorModel, version 1\n",
+      "Created version '1' of model 'RandomForestRegressorModel'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2. Register the Model (if using MLflow Tracking Server)\n",
+    "result = mlflow.register_model(\n",
+    "    \"runs:/{}/random_forest_model\".format(mlflow.active_run().info.run_id),\n",
+    "    \"RandomForestRegressorModel\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "114afa94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['random_forest_model.pkl']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save the best model to a pickle file\n",
+    "joblib.dump(best_model, \"random_forest_model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ede16d4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['random_forest_model.pkl']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save the best model to a pickle file\n",
+    "joblib.dump(best_model, \"random_forest_model.pkl\")"
+   ]
   }
  ],
  "metadata": {
